--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <button id="rotationLinkButton" style="display: none;">Learn More</button>
 </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/main.js"></script>
 
     <script>
         // Smooth scroll to Mars world section
