--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         #landing button {
             padding: 0.8rem 2rem;
-            background-color: white;
+            background-color: rgb(123, 69, 209);
             color: black;
             border: none;
             border-radius: 25px;
@@ -129,7 +129,7 @@
 
     #rotationLinkButton {
         padding: 0.8rem 2rem;
-        background-color: #6200ea;
+        background-color: #b78df0;
         color: white;
         border: none;
         border-radius: 25px;
@@ -171,11 +171,12 @@
 
     <!-- Sidebar Navigation -->
     <div id="sidebar">
-        <a href="#" id="link-world">Tamerlan's Portfolio</a>
-        <a href="#" id="link-about">About</a>
-        <a href="#" id="link-legal">Projects</a>
-        <a href="#" id="link-contact">Contact</a>
+        <a href="https://github.com/GTamerlan?tab=repositories" target="_blank" id="link-github">GitHub</a>
+        <a href="https://gtamerlan.com/" target="_blank" id="link-linkedin">Personal Website</a>
+    
+        <a href="https://gtamerlan.com/5/" target="_blank" id="link-contact">Contact</a>
     </div>
+    
 
     <!-- Mars World Section -->
     <div id="marsWorld">
